Resolves: tdf#104096 reset also rRawRes if trailing characters are present

... in lcl_ScAddress_Parse_OOo() so that ScRange::Parse() doesn't receive a
"partially valid" result and does not attempt to follow the entire column/row
path.

Change-Id: Ie37c9d22280e30f770422fb621e3b9d972ec1546
(cherry picked from commit 8846cc2218091aa2af8ee3aadd81fd8a80e3b303)